// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProgressBar > should handle empty sections array 1`] = `
<div
  class="relative mb-5 flex justify-stretch px-8 pb-1"
/>
`;

exports[`ProgressBar > should handle negative progress 1`] = `
<div
  class="relative mb-5 flex justify-stretch px-8 pb-1"
>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      1
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 1
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 0%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      2
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 2
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 0%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      3
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 3
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 0%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      4
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 4
    </div>
  </div>
</div>
`;

exports[`ProgressBar > should handle progress greater than sections length 1`] = `
<div
  class="relative mb-5 flex justify-stretch px-8 pb-1"
>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      1
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 1
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 900%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      2
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 2
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 800%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      3
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 3
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 700%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      4
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 4
    </div>
  </div>
</div>
`;

exports[`ProgressBar > should render progress bar with all sections 1`] = `
<div
  class="relative mb-5 flex justify-stretch px-8 pb-1"
>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      1
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 1
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary "
      style="width: 100%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      2
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 2
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 0%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      3
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 3
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 0%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      4
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 4
    </div>
  </div>
</div>
`;

exports[`ProgressBar > should render with full progress 1`] = `
<div
  class="relative mb-5 flex justify-stretch px-8 pb-1"
>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      1
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 1
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 300%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      2
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 2
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 200%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      3
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 3
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary "
      style="width: 100%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      4
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 4
    </div>
  </div>
</div>
`;

exports[`ProgressBar > should render with no progress 1`] = `
<div
  class="relative mb-5 flex justify-stretch px-8 pb-1"
>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      1
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 1
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 0%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      2
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 2
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 0%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      3
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 3
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 0%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      4
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 4
    </div>
  </div>
</div>
`;

exports[`ProgressBar > should render with partial progress 1`] = `
<div
  class="relative mb-5 flex justify-stretch px-8 pb-1"
>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      1
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 1
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 150%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      2
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Section 2
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 50%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      3
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 3
    </div>
  </div>
  <div
    class="bg-content3 relative top-4 flex h-1 grow overflow-hidden"
  >
    <div
      class="bg-primary rounded-r-full"
      style="width: 0%;"
    />
  </div>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 "
    >
      4
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm "
    >
      Section 4
    </div>
  </div>
</div>
`;

exports[`ProgressBar > should render with single section 1`] = `
<div
  class="relative mb-5 flex justify-stretch px-8 pb-1"
>
  <div
    class="flex flex-col items-center justify-center gap-2"
  >
    <div
      class="border-default-200 bg-content1 text-neutral-foreground flex size-8 items-center justify-center rounded-full border p-4 border-primary bg-primary text-primary-foreground"
    >
      1
    </div>
    <div
      class="text-neutral-foreground absolute top-full text-sm text-primary"
    >
      Only Section
    </div>
  </div>
</div>
`;
